Changing the website to a new format from Gemini, needs to be updated still

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/nomad_nexus.svg" />
+    <link rel="icon" type="image/png" href="/digitial_nomad_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digital Nomad</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <title>Digital Nomad LLC - Hacker Theme</title>
+    <!-- Google Fonts - Space Mono (imported directly here as per theme request) -->
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
